app-deploy/blue-green/blue-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue-demo
        image: reg.xinxianghf.cloud/library/rollouts-demo:blue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
  labels:
    app: blue
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: blue
  type: ClusterIP
