app-deploy/blue-green/green-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  labels:
    app: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green-demo
        image: reg.xinxianghf.cloud/library/rollouts-demo:green
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
  labels:
    app: green
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: green
  type: ClusterIP
